Refactor: 에이전트 홈의 권한 조회 재사용과 불필요한 데이터 조회 제거